--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@emailjs/browser": "^4.4.1",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^8.18.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.29.0",
     "lucide-react": "^0.468.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "tailwind-merge": "^3.4.0",
     "three": "^0.182.0"
   },
   "devDependencies": {
