--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "lucide-react": "^0.468.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
+    "react-router-dom": "^7.13.0",
     "simplex-noise": "^4.0.3",
     "tailwind-merge": "^3.4.0",
     "three": "^0.182.0"
